[package]
name = "leetcode"
version = "0.1.0"
authors = ["akaishi <galigalikun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[[bin]]
name = "132-pattern"
path = "src/132-pattern.rs"

[[bin]]
name = "3sum-closest"
path = "src/3sum-closest.rs"

[[bin]]
name = "3sum"
path = "src/3sum.rs"

[[bin]]
name = "4sum-ii"
path = "src/4sum-ii.rs"

[[bin]]
name = "4sum"
path = "src/4sum.rs"

[[bin]]
name = "01-matrix"
path = "src/01-matrix.rs"

[[bin]]
name = "2-keys-keyboard"
path = "src/2-keys-keyboard.rs"

[[bin]]
name = "24-game"
path = "src/24-game.rs"
